--- a/_posts/2020-02-24-amld.md
+++ b/_posts/2020-02-24-amld.md
@@ -5,6 +5,8 @@
 
 # The Applied Machine Learning Days In Review
 
+![amld.jpg](attachment:amld.jpg)
+
 *Source: https://twitter.com/appliedmldays/header_photo*
 
 I recently had the opportunity to attend the Applied Machine Learning Days Conference in Lausanne, where I spent five days participating in workshops and attending  talks by researchers and industry leaders in the field of Machine Learning. With this post I would like to share my impressions from the event and reflect on some of my personal highlights from the event.
