Deleted unnecessary title and fixed faulty image reference in amld.md

--- a/_posts/2020-02-24-amld.md
+++ b/_posts/2020-02-24-amld.md
@@ -1,11 +1,6 @@
-
-# Title
-> summary
-
-
 # The Applied Machine Learning Days In Review
 
-![amld.jpg](attachment:amld.jpg)
+![amld.jpg](attachment:att_00000.jpeg)
 
 *Source: https://twitter.com/appliedmldays/header_photo*
 
