Another attempt at fixing the image issue

--- a/_posts/2020-02-24-amld.md
+++ b/_posts/2020-02-24-amld.md
@@ -1,6 +1,6 @@
 # The Applied Machine Learning Days In Review
 
-![amld.jpg](attachment:att_00000.jpeg)
+![att_00000.jpg](attachment:att_00000.jpeg)
 
 *Source: https://twitter.com/appliedmldays/header_photo*
 
